@@ -1,13 +1,23 @@
 package az.cybernet.internship.dictionary.mapper;
 
 import az.cybernet.internship.dictionary.entity.DictionaryCategory;
+import az.cybernet.internship.dictionary.entity.DictionaryItem;
 import az.cybernet.internship.dictionary.model.request.CategoryRequest;
 import az.cybernet.internship.dictionary.model.response.CategoryResponse;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
+import static lombok.AccessLevel.PRIVATE;
+
 @Component
+@RequiredArgsConstructor
+@FieldDefaults(level = PRIVATE, makeFinal = true)
 public class CategoryMapper {
+
+    ItemMapper itemMapper;
+
     public DictionaryCategory buildDictionaryCategory(CategoryRequest request) {
         return DictionaryCategory.builder()
                 .id(request.getId())
@@ -25,11 +35,11 @@ public class CategoryMapper {
                 .createdAt(category.getCreatedAt())
                 .updatedAt(category.getUpdatedAt())
                 .isActive(category.getIsActive())
-//                .items(
-//                        category.getItems().stream()
-//                                .map(ITEM_MAPPER::buildItemResponse)
-//                                .collect(Collectors.toList())
-//                )
+                .items(category.getItems()
+                        .stream()
+                        .filter(DictionaryItem::getIsActive)
+                        .map(itemMapper::buildItemResponse)
+                        .toList())
                 .build();
     }
 
